--- a/index.html
+++ b/index.html
@@ -2751,10 +2751,14 @@
                 <div class="hero-badges-row fade-up visible fade-up-delay-8" style="margin-top: 20px;">
                     <a href="https://www.uneed.best/tool/whitespace" target="_blank" rel="noopener" class="hero-potd-row" style="text-decoration: none;">
                         <img src="src/assets/uneed-logo.avif" alt="Uneed" class="potd-badge-inline">
-                        <span>Uneed #1 App of the Day + Top 3 App of the Week</span>
+                        <span>#1 Product of the Day</span>
                     </a>
-                </div>
-                <div class="hero-badges-row fade-up visible fade-up-delay-8" style="margin-top: 6px;">
+                    <span class="hero-badge-divider">·</span>
+                    <a href="https://www.uneed.best/tool/whitespace" target="_blank" rel="noopener" class="hero-potd-row" style="text-decoration: none;">
+                        <img src="src/assets/uneed-logo.avif" alt="Uneed" class="potd-badge-inline">
+                        <span>Top 3 Product of the Week</span>
+                    </a>
+                    <span class="hero-badge-divider">·</span>
                     <a href="https://apps.apple.com/us/app/whitespace-sleep-learn-focus/id6755617899" target="_blank" rel="noopener" class="hero-potd-row" style="text-decoration: none;">
                         <span style="color: #f5a623; font-style: normal; font-size: 12px; letter-spacing: 1px;">&#9733;&#9733;&#9733;&#9733;&#9733;</span>
                         <span>on the App Store</span>
@@ -3321,13 +3325,17 @@
             <div class="cta-box">
                 <img src="https://c4c7ee2640e335085d93afe0c1a41ae6.cdn.bubble.io/f1766176221836x544526176091019140/whitespace.png" alt="Whitespace" style="width: 88px; height: auto; margin-bottom: 20px; opacity: 0.85;">
                 <h2 class="crimson">Start 10x'ing from the inside out</h2>
-                <div class="hero-badges-row" style="margin-bottom: 6px;">
+                <div class="hero-badges-row" style="margin-bottom: 24px;">
                     <a href="https://www.uneed.best/tool/whitespace" target="_blank" rel="noopener" class="hero-potd-row" style="text-decoration: none;">
                         <img src="src/assets/uneed-logo.avif" alt="Uneed" class="potd-badge-inline">
-                        <span>Uneed #1 App of the Day + Top 3 App of the Week</span>
+                        <span>#1 Product of the Day</span>
                     </a>
-                </div>
-                <div class="hero-badges-row" style="margin-bottom: 24px;">
+                    <span class="hero-badge-divider">·</span>
+                    <a href="https://www.uneed.best/tool/whitespace" target="_blank" rel="noopener" class="hero-potd-row" style="text-decoration: none;">
+                        <img src="src/assets/uneed-logo.avif" alt="Uneed" class="potd-badge-inline">
+                        <span>Top 3 Product of the Week</span>
+                    </a>
+                    <span class="hero-badge-divider">·</span>
                     <a href="https://apps.apple.com/us/app/whitespace-sleep-learn-focus/id6755617899" target="_blank" rel="noopener" class="hero-potd-row" style="text-decoration: none;">
                         <span style="color: #f5a623; font-style: normal; font-size: 12px; letter-spacing: 1px;">&#9733;&#9733;&#9733;&#9733;&#9733;</span>
                         <span>on the App Store</span>
