--- a/privacy.html
+++ b/privacy.html
@@ -218,7 +218,7 @@
         <div class="header">
             <a href="/"><img src="https://c4c7ee2640e335085d93afe0c1a41ae6.cdn.bubble.io/f1766176221836x544526176091019140/whitespace.png" alt="Whitespace" class="logo"></a>
             <h1>Privacy Policy</h1>
-            <p class="last-updated">Last Updated: December 2025</p>
+            <p class="last-updated">Last Updated: February 2026</p>
         </div>
 
         <div class="content">
@@ -292,6 +292,9 @@
                 <li>Basic profile information (name, email)</li>
                 <li>We do not receive or store your password from these providers</li>
             </ul>
+
+            <p><strong>Google Calendar</strong> (if connected)</p>
+            <p>If you choose to connect your Google Calendar, we collect event times, titles, and durations. See <strong>Section 12: Google Calendar Integration</strong> for full details.</p>
 
             <p><strong>Analytics</strong> (if enabled)</p>
             <ul>
@@ -549,14 +552,60 @@
             </ul>
             <p>This is NOT "tracking" as defined by Apple's App Tracking Transparency framework.</p>
 
-            <h2>12. THIRD-PARTY LINKS AND SERVICES</h2>
+            <h2>12. GOOGLE CALENDAR INTEGRATION</h2>
+
+            <h3>12.1 Opt-In Connection</h3>
+            <p>Whitespace offers an optional Google Calendar integration that allows you to receive personalized meditation suggestions based on your schedule. This integration is entirely opt-in — your Google Calendar is never accessed unless you explicitly connect it within the app.</p>
+
+            <h3>12.2 Data We Access and Collect</h3>
+            <p>When you connect your Google Calendar, we use the Google Calendar API with the <strong>calendar.events.readonly</strong> scope. We collect and store the following information from your calendar:</p>
+            <ul>
+                <li>Event times (start and end)</li>
+                <li>Event titles</li>
+                <li>Event durations</li>
+            </ul>
+            <p>We do not access or store attendee lists, event descriptions, attachments, or any other calendar metadata beyond what is listed above.</p>
+
+            <h3>12.3 How We Use This Data</h3>
+            <p>Your calendar data is used solely to power personalized meditation suggestions — for example, suggesting a calming session before a busy block of meetings. Specifically, your calendar data is:</p>
+            <ul>
+                <li><strong>Never</strong> used for advertising or marketing purposes</li>
+                <li><strong>Never</strong> sold to or shared with third parties</li>
+                <li><strong>Never</strong> used to train general-purpose AI or machine learning models</li>
+            </ul>
+
+            <h3>12.4 Data Security</h3>
+            <p>Calendar data is securely transmitted using TLS/SSL encryption and stored encrypted at rest on our servers. Access to stored calendar data is restricted to automated systems that generate your personalized suggestions.</p>
+
+            <h3>12.5 Human Access</h3>
+            <p>No Whitespace employee or contractor will read your calendar data unless:</p>
+            <ul>
+                <li>You have given explicit consent (e.g., for a support request)</li>
+                <li>It is necessary for security purposes or to investigate abuse</li>
+                <li>It is required by applicable law</li>
+            </ul>
+
+            <h3>12.6 Disconnecting and Data Deletion</h3>
+            <p>You can disconnect your Google Calendar at any time from within the app. Upon disconnection:</p>
+            <ul>
+                <li>We immediately stop accessing your Google Calendar</li>
+                <li>You may request deletion of all stored calendar data from within the app</li>
+                <li>Deleted calendar data is permanently removed from our servers within 30 days</li>
+            </ul>
+            <p>If you delete your Whitespace account, all stored calendar data is also deleted as described in Section 4.5.</p>
+
+            <h3>12.7 Google API Services User Data Policy Compliance</h3>
+            <p>Our use of Google Calendar data complies with <a href="https://developers.google.com/terms/api-services-user-data-policy" style="color: rgba(107, 140, 255, 0.9);">Google's API Services User Data Policy</a>, including the Limited Use requirements.</p>
+            <p><strong>Whitespace's use and transfer to any other app of information received from Google APIs will adhere to <a href="https://developers.google.com/terms/api-services-user-data-policy" style="color: rgba(107, 140, 255, 0.9);">Google API Services User Data Policy</a>, including the Limited Use requirements.</strong></p>
+
+            <h2>13. THIRD-PARTY LINKS AND SERVICES</h2>
             <p>The Service may contain links to third-party websites or services. We are not responsible for the privacy practices of these third parties. We encourage you to review their privacy policies.</p>
 
-            <h2>13. CHANGES TO THIS POLICY</h2>
+            <h2>14. CHANGES TO THIS POLICY</h2>
             <p>We may update this Privacy Policy from time to time. We will notify you of material changes through the app or by email. The "Last Updated" date at the top indicates when the policy was last revised.</p>
             <p>Continued use of the Service after changes constitutes acceptance of the updated policy.</p>
 
-            <h2>14. CONTACT US</h2>
+            <h2>15. CONTACT US</h2>
             <p>For privacy-related questions, to exercise your rights, or for general support:</p>
             <p><strong>Email:</strong> hello@trywhitespace.com</p>
             <p><strong>Address:</strong><br>
